--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
  <body>
 
     <canvas id="canvas" width="800" height="800"></canvas>
-    <script src="js/game.js"></script>
+    <script src="game.js"></script>
 
  </body>
 </html>
