--- a/index.html
+++ b/index.html
@@ -2,15 +2,12 @@
 <html lang="en">
  <head>
     <meta charset="utf-8">
-    <meta name="viewport" vontent="width=device-width,
-    initial-scale=1.0">
+    <meta name="viewport" vontent="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title> Spacewar</title>
+    <title> Spacewar </title>
  </head>
  <body>
-
     <canvas id="canvas" width="800" height="800"></canvas>
     <script src="game.js"></script>
-
  </body>
 </html>
